bugfix: remove unnecessary react-intl wrap

--- a/src/components/slider/_styles.pcss
+++ b/src/components/slider/_styles.pcss
@@ -62,8 +62,10 @@
 
 .arrow_right,
 .arrow_left {
-  fill: var(--c_txt);
-  width: calc(35rem/var(--f_size));
+  & svg {
+    fill: var(--c_txt);
+    width: calc(35rem/var(--f_size));
+  }
 }
 
 .arrow_left {
